--- a/package.json
+++ b/package.json
@@ -179,13 +179,14 @@
     "@types/history": "^4.7.7",
     "@types/jest": "^26.0.15",
     "@types/node": "12",
-    "@types/react": "^16.9.44",
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.9",
     "@types/react-redux": "^7.1.9",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux-logger": "^3.0.8",
+    "@types/sql.js": "^1.0.3",
     "@types/webpack": "^4.41.21",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
@@ -196,6 +197,7 @@
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.5.3",
     "browserslist-config-erb": "^0.0.1",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
@@ -259,8 +261,9 @@
     "@fluentui/react": "^7.153.4",
     "@fortawesome/fontawesome-free": "^5.15.0",
     "@hot-loader/react-dom": "^16.13.0",
+    "@now/build-utils": "^2.6.0",
     "@reduxjs/toolkit": "^1.4.0",
-    "@types/sql.js": "^1.0.3",
+    "@vercel/build-utils": "^2.6.0",
     "@vercel/node": "^1.8.5",
     "connected-react-router": "^6.6.1",
     "electron-debug": "^3.1.0",
