--- a/package.json
+++ b/package.json
@@ -174,7 +174,6 @@
     "@babel/preset-typescript": "^7.12.1",
     "@babel/register": "^7.12.1",
     "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
-    "@types/command-exists": "^1.2.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.7",
@@ -263,15 +262,15 @@
     "@fortawesome/fontawesome-free": "^5.15.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@now/build-utils": "^2.6.0",
+    "@octokit/rest": "^18.0.12",
     "@reduxjs/toolkit": "^1.4.0",
     "@vercel/build-utils": "^2.6.0",
     "@vercel/node": "^1.8.5",
-    "command-exists": "^1.2.9",
+    "axios": "^0.21.0",
     "connected-react-router": "^6.6.1",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
-    "github-api": "^3.3.0",
     "history": "^4.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
