--- a/package.json
+++ b/package.json
@@ -173,9 +173,11 @@
     "@babel/preset-react": "^7.12.1",
     "@babel/preset-typescript": "^7.12.1",
     "@babel/register": "^7.12.1",
+    "@morteza-jamali/micon-font": "^3.0.168",
     "@teamsupercell/typings-for-css-modules-loader": "^2.4.0",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/express": "^4.17.9",
     "@types/history": "^4.7.7",
     "@types/jest": "^26.0.15",
     "@types/node": "12",
@@ -271,6 +273,7 @@
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
+    "express": "^4.17.1",
     "history": "^4.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.12.0",
