--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/morteza-jamali/DBHub.git"
+    "url": "https://github.com/morteza-jamali/DBHub"
   },
   "author": {
     "name": "Morteza Jamali",
@@ -199,7 +199,6 @@
     "babel-plugin-dev-expression": "^0.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react": "^6.24.1",
-    "bootstrap": "^4.5.3",
     "browserslist-config-erb": "^0.0.1",
     "chalk": "^4.1.0",
     "concurrently": "^5.3.0",
@@ -261,7 +260,6 @@
   },
   "dependencies": {
     "@fluentui/react": "^7.153.4",
-    "@fortawesome/fontawesome-free": "^5.15.0",
     "@hot-loader/react-dom": "^16.13.0",
     "@now/build-utils": "^2.6.0",
     "@octokit/rest": "^18.0.12",
