Terminal created successfully !

--- a/package.json
+++ b/package.json
@@ -279,6 +279,7 @@
     "react-hot-loader": "^4.12.21",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-split": "^2.0.9",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.13",
@@ -286,7 +287,9 @@
     "source-map-support": "^0.5.19",
     "sql.js": "^1.4.0",
     "ts-node": "^9.1.0",
-    "typeorm": "^0.2.29"
+    "typeorm": "^0.2.29",
+    "xterm-addon-fit": "^0.4.0",
+    "xterm-for-react": "^1.0.4"
   },
   "devEngines": {
     "node": ">=7.x",
