--- a/vercel/package.json
+++ b/vercel/package.json
@@ -1,23 +1,67 @@
 {
-  "dependencies": {
-    "@vercel/build-utils": "^2.6.0",
-    "@vercel/node": "^1.8.5"
-  },
-  "name": "vercel",
+  "name": "lb4-api",
   "version": "0.0.1",
-  "scripts": {},
+  "description": "DBHub RESTful API",
   "keywords": [
-    "DBHub",
-    "API",
-    "RESTful",
-    "Database",
-    "SQL"
+    "loopback-application",
+    "loopback"
   ],
-  "author": {
-    "name": "Morteza Jamali",
-    "email": "mortezajamali4241@gmail.com",
-    "url": "https://morteza-jamali.github.io"
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "engines": {
+    "node": ">=10.16"
   },
-  "license": "MIT",
-  "description": "DBHub RESTful API"
+  "scripts": {
+    "build": "lb-tsc",
+    "build:watch": "lb-tsc --watch",
+    "lint": "npm run eslint && npm run prettier:check",
+    "lint:fix": "npm run eslint:fix && npm run prettier:fix",
+    "prettier:cli": "lb-prettier \"**/*.ts\" \"**/*.js\"",
+    "prettier:check": "npm run prettier:cli -- -l",
+    "prettier:fix": "npm run prettier:cli -- --write",
+    "eslint": "lb-eslint --report-unused-disable-directives .",
+    "eslint:fix": "npm run eslint -- --fix",
+    "pretest": "npm run rebuild",
+    "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
+    "posttest": "npm run lint",
+    "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
+    "premigrate": "npm run build",
+    "migrate": "node ./dist/migrate",
+    "preopenapi-spec": "npm run build",
+    "openapi-spec": "node ./dist/openapi-spec",
+    "rebuild": "npm run clean && npm run build",
+    "prestart": "npm run rebuild",
+    "start": "node -r source-map-support/register .",
+    "clean": "lb-clean dist *.tsbuildinfo .eslintcache"
+  },
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "author": "morteza-jamali <mortezajamali4241@gmail.com>",
+  "license": "",
+  "files": [
+    "README.md",
+    "dist",
+    "src",
+    "!*/__tests__"
+  ],
+  "dependencies": {
+    "@loopback/boot": "^3.1.2",
+    "@loopback/core": "^2.13.1",
+    "@loopback/repository": "^3.3.0",
+    "@loopback/rest": "^9.1.1",
+    "@loopback/rest-explorer": "^3.0.5",
+    "@loopback/service-proxy": "^3.0.5",
+    "tslib": "^2.0.0"
+  },
+  "devDependencies": {
+    "@loopback/build": "^6.2.8",
+    "source-map-support": "^0.5.19",
+    "@loopback/testlab": "^3.2.10",
+    "@types/node": "^10.17.48",
+    "@loopback/eslint-config": "^10.0.4",
+    "eslint": "^7.15.0",
+    "typescript": "~4.1.2"
+  }
 }
